@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.crunchyroll-takeout"  name="Crunchyroll;xbmc" provider-name="Yoshi of the Wire" version="2.0.2">
+<addon id="plugin.video.crunchyroll-takeout"  name="Crunchyroll;xbmc" provider-name="Yoshi of the Wire" version="2.0.3">
 	<import addon="xbmc.python" version="2.1.0"/>
-	<import addon="script.module.datetime" version="2.2"/>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
 	</extension>
